--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -1,130 +1,68 @@
-name: Terraform Apply with Remote State
-run-name: ${{ github.actor }} is deploying on AWS 🚀
+name: Terraform Apply on AWS
+
 on:
   push:
-    branches: 
+    branches:
       - feature/aws-s3-module
+
+env:
+  AWS_REGION: eu-west-1
+
 jobs:
-  Deploy-AWS-Ec2:
+  deploy-aws:
     runs-on: ubuntu-latest
+
     steps:
-      #Step 0: Read user mapping
       - name: Checkout code
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
 
-      - name: Read User Mapping
-        id: user-mapping
-        run: |
-          user_mapping=$(cat .github/workflows/user-mapping.json)
-          github_actor=${{ github.actor }}
-
-          echo "User mapping: $user_mapping"
-          echo "GitHub actor: $github_actor"
-
-          user_data=$(echo "$user_mapping" | jq -r '[".$github_actor"]')
-
-          if [[ -z "$user_data" ]]; then
-              echo "No user mapping found for $github_actor"
-              exit 1
-          fi
-
-          access_key_id=$(echo $user_data | jq -r '.AWS_SECRET_ACCESS_KEY_ID')
-          secret_access_key=$(echo $user_data | jq -r '.AWS_SECRET_ACCESS_KEY')
-
-          echo "Access key ID: $access_key_id"
-          echo "Secret access key: $secret_access_key"
-
-          echo "::set-output name=access_key_id::${access_key_id}"
-          echo "::set-output name=secret_access_key::${secret_access_key}"
-
-      - name: Print User Mapping
-        run: echo "${{ steps.user-mapping.outputs.user-mapping }}"
-
-      - name: Configure AWS credentials
+      - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v3
         with:
-          aws-access-key-id: ${{ steps.read_mapping.outputs.access_key_id }}
-          aws-secret-access-key: ${{ steps.read_mapping.outputs.secret_access_key }}
-          aws-region: us-central-1
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
 
-      #- name: Checkout Repository
-      #  uses: actions/checkout@v4
-
-      # Step 3: Ensure Terraform state S3 bucket exists
-      - name: Create Terraform State Bucket
+      # OPTIONAL: Create Terraform state bucket if needed
+      - name: Create S3 Bucket for State (optional)
         run: |
           cd terraform/terraform-modules/state-bucket
           terraform init
-          terraform apply -auto-approve || echo "Bucket already exists, continuing..."
-      # Step 4: Reconfigure Backend to Use S3
-      - name: Reconfigure Backend to S3
-        run: |
-          cd terraform/terraform-modules/tf-ec2-module/
-          terraform init -backend-config="bucket=terraform_state_bucket" \
-                         -backend-config="key=state/${GITHUB_REF#refs/heads/}/terraform.tfstate" \
-                         -backend-config="region=eu-central-1"
+          terraform apply -auto-approve || echo "Bucket exists"
 
-      # Step 5: Apply Terraform with S3 backend
-      - name: Finalize Infrastructure Deployment
+      # Init backend config
+      - name: Init Terraform with S3 Backend
         run: |
-          cd terraform/terraform-modules/tf-ec2-module/
-          terraform apply -auto-approve
+          cd terraform/terraform-modules/tf-ec2-module
+          terraform init \
+            -backend-config="bucket=terraform-state-unique-bucket-name" \
+            -backend-config="key=feature/aws-s3-module/terraform.tfstate" \
+            -backend-config="region=${{ env.AWS_REGION }}"
 
-      # Step 6: Refresh Terraform State to ensure it's up to date with AWS
-      - name: Refresh Terraform State
+      # Terraform Apply
+      - name: Apply Infrastructure
         run: |
-          cd terraform/terraform-modules/tf-ec2-module/
+          cd terraform/terraform-modules/tf-ec2-module
+          terraform apply -auto-approve \
+            -var="aws_access_key_id=${{ secrets.AWS_ACCESS_KEY_ID }}" \
+            -var="aws_secret_access_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
+            -var="aws_default_region=${{ env.AWS_REGION }}" \
+            -var="resource_group_name=${{ secrets.RESOURCE_GROUP_NAME }}" \
+            -var="vm_admin_username=${{ secrets.VM_ADMIN_USERNAME }}" \
+            -var="vm_admin_password=${{ secrets.VM_ADMIN_PASSWORD }}"
+
+      - name: Refresh State (Optional)
+        run: |
+          cd terraform/terraform-modules/tf-ec2-module
           terraform refresh
-      # Step 7: Capture Terraform Outputs to Variables
-      - name: Capture Terraform Outputs
-        id: terraform_outputs
+
+      - name: Capture Outputs
+        id: tf_outputs
         run: |
-          cd terraform/terraform-modules/tf-ec2-module/
-          export VPC_ID=$(terraform output -raw vpc_id)
-          export PUBLIC_SUBNET_ID=$(terraform output -raw public_subnet_id)
-          export PRIVATE_SUBNET_ID=$(terraform output -raw private_subnet_id)
-          export SECURITY_GROUP_ID=$(terraform output -raw security_group_id)
-          echo "VPC_ID=$VPC_ID" >> $GITHUB_ENV
-          echo "PUBLIC_SUBNET_ID=$PUBLIC_SUBNET_ID" >> $GITHUB_ENV
-          echo "PRIVATE_SUBNET_ID=$PRIVATE_SUBNET_ID" >> $GITHUB_ENV
-          echo "SECURITY_GROUP_ID=$SECURITY_GROUP_ID" >> $GITHUB_ENV
+          cd terraform/terraform-modules/tf-ec2-module
+          echo "instance_ip=$(terraform output -raw instance_ip)" >> $GITHUB_ENV
 
-      # Step 8: Validate Resources with AWS CLI
-      - name: List Resources Created by Terraform
+      - name: Destroy Infra (Optional)
         run: |
-          # List VPC
-          echo "Listing VPC with ID: $VPC_ID"
-          aws ec2 describe-vpcs --vpc-ids $VPC_ID || echo "Failed to list VPC with ID: $VPC_ID"
-
-          # List Public Subnet
-          echo "Listing Public Subnet with ID: $PUBLIC_SUBNET_ID"
-          aws ec2 describe-subnets --subnet-ids $PUBLIC_SUBNET_ID || echo "Failed to list Public Subnet with ID: $PUBLIC_SUBNET_ID"
-
-          # List Private Subnet
-          echo "Listing Private Subnet with ID: $PRIVATE_SUBNET_ID"
-          aws ec2 describe-subnets --subnet-ids $PRIVATE_SUBNET_ID || echo "Failed to list Private Subnet with ID: $PRIVATE_SUBNET_ID"
-
-          # List Security Group
-          echo "Listing Security Group with ID: $SECURITY_GROUP_ID"
-          aws ec2 describe-security-groups --group-ids $SECURITY_GROUP_ID || echo "Failed to list Security Group with ID: $SECURITY_GROUP_ID"
-
-      # Step 9: Destroy Infrastructure
-      - name: Destroy Infrastructure
-        run: |
-          cd terraform/terraform-modules/tf-ec2-module/
+          cd terraform/terraform-modules/tf-ec2-module
           terraform destroy -auto-approve
-
-      # Step 10: Verify Resources are Destroyed
-      - name: Verify Resources are Destroyed
-        run: |
-          # Verify that resources were destroyed by listing them again
-          echo "Verifying VPC Destruction..."
-          aws ec2 describe-vpcs --vpc-ids $VPC_ID || echo "VPC with ID $VPC_ID does not exist."
-          echo "Verifying Public Subnet Destruction..."
-          aws ec2 describe-subnets --subnet-ids $PUBLIC_SUBNET_ID || echo "Public Subnet with ID $PUBLIC_SUBNET_ID does not exist."
-          echo "Verifying Private Subnet Destruction..."
-          aws ec2 describe-subnets --subnet-ids $PRIVATE_SUBNET_ID || echo "Private Subnet with ID $PRIVATE_SUBNET_ID does not exist."
-          echo "Verifying Security Group Destruction..."
-          aws ec2 describe-security-groups --group-ids $SECURITY_GROUP_ID || echo "Security Group with ID $SECURITY_GROUP_ID does not exist."
